@@ -1,10 +1,16 @@
 plugins {
     id "java"
     id "idea"
-    id "application"
     id "org.inferred.processors" version "1.2.3"
-    id "com.palantir.docker" version "0.9.1"
     id "com.palantir.configuration-resolver" version "0.1.0"
+}
+
+apply plugin: io.quartic.gradle.ServicePlugin
+
+service {
+    simpleName = "terminator"
+    mainClassName = "io.quartic.terminator.TerminatorApplication"
+    memory = System.env.TERMINATOR_MEMORY ?: "64m"
 }
 
 dependencies {
@@ -23,28 +29,4 @@ dependencies {
     testCompile libraries.wiremock
     testCompile libraries.dropwizardTesting
 }
-
-jar {
-    manifest {
-        attributes("Implementation-Version": version)
-    }
-}
-
-ext.memorySetting = System.env.TERMINATOR_MEMORY ?: "64m"
-
-mainClassName = "io.quartic.terminator.TerminatorApplication"
-applicationDefaultJvmArgs = ["-Xms${memorySetting}", "-Xmx${memorySetting}", "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-Xloggc:mygclogfilename.gc"]
-
-
-run {
-    args = ["server", "terminator.yml"]
-}
-
-docker {
-    name      "${System.env.QUARTIC_DOCKER_REPOSITORY}/terminator:${version}"
-    dependsOn distTar
-    files     "build.gradle"    // Seems to be no way to say "no files", so using this as dummy
-}
-
-
 
